tests/fixtures/error/error-invalid-request.js
module.exports = {
	"message": "Requisição inválida",
	"code": "02"
}